# tufa_common

./: .env  Cargo.toml  README.md
src/: code_examples.md  constants.rs  dev.rs  dev_with_deserialize.rs  json_example.rs  lib.rs  where_was.rs
src/common/: api_request_unexpected_error.rs  change_password_form_data.rs  code_occurence.rs  display_foreign_type.rs  file_line_column.rs  increment_pid_time_file_line_column.rs  increment_time_file_line_column.rs  mod.rs  pid_hostname_time_file_line_column.rs  pid_time_file_line_column.rs  postgres_credentials.rs  serde_urlencoded.rs  serde_urlencoded_wrapper.rs  source_and_code_occurence.rs  source_place_type.rs  std_str_from_str_with_lifetime.rs  time_file_line_column.rs  time_file_line_column_increment.rs  tvfrr_status_code_traits.rs  url_encode.rs  user_port.rs  where_was.rs
src/common/config/: config_fields.rs  get_email_client.rs  get_server_address.rs  mod.rs  try_create_tcp_listener.rs  try_get_mongo_client.rs  try_get_postgres_pool.rs  try_get_redis_session_storage.rs
src/common/declarative_macros/: code_occurence.rs
src/common/error_logs_logic/: code_occurence_prepare_for_log.rs  error_log.rs  error_occurence_named.rs  error_occurence_unnamed.rs  form_error_path.rs  get_code_occurence.rs  get_code_path_without_config.rs  get_file.rs  get_line.rs  hashmap_display_display_foreign_type_into_hashmap_display_string.rs  hashmap_display_display_foreign_type_into_hashmap_string_string.rs  hashmap_display_display_foreign_type_to_string.rs  hashmap_display_display_into_hashmap_display_string.rs  hashmap_display_display_into_hashmap_string_string.rs  hashmap_display_display_to_string.rs  hashmap_display_foreign_type_display_foreign_type_into_hashmap_string_display_foreign_type.rs  hashmap_display_foreign_type_display_foreign_type_into_hashmap_string_string.rs  hashmap_display_foreign_type_display_foreign_type_to_string.rs  hashmap_display_foreign_type_display_into_hashmap_string_string.rs  hashmap_display_foreign_type_display_to_string.rs  hashmap_display_foreign_type_to_string_with_config_to_string.rs  hashmap_display_foreign_type_to_string_without_config_to_string.rs  hashmap_display_to_string_with_config_to_string.rs  hashmap_display_to_string_without_config_to_string.rs  helpers.rs  into_actix_web_error.rs  into_actix_web_http_response.rs  lines_space_backslash.rs  mod.rs  source_to_string_with_config.rs  source_to_string_with_config_second.rs  source_to_string_without_config.rs  to_string_with_config.rs  to_string_with_config_second.rs  to_string_without_config.rs  vec_display_foreign_type_into_vec_string.rs  vec_display_foreign_type_to_string.rs  vec_display_to_string.rs  vec_to_string_with_config_to_string.rs  vec_to_string_without_config_to_string.rs
src/common/git/: get_commit_link.rs  get_git_commit_info.rs  get_git_commit_link.rs  get_git_html_info.rs  get_git_info.rs  get_git_source_file_link.rs  git_fields.rs  git_info.rs  git_info_wrapper.rs  mod.rs  project_git_info.rs
src/config/: mod.rs
src/config_mods/: config_struct.rs  log_type.rs  mod.rs  print_type.rs  source_place_type.rs
src/config_mods/config_functions/: get_mongo_url.rs  mod.rs  wrap_config_checks.rs
src/config_mods/traits/: fields.rs  get_mongo_url_trait.rs  get_postgres_url.rs  impl_mongo.rs  mod.rs
src/global_variables/: hardcode.rs  mod.rs
src/global_variables/compile_time/: git_info.rs  project_git_info.rs
src/global_variables/runtime/: config.rs  git_info_without_lifetimes.rs  hostname.rs  mod.rs  mongo_client_options.rs
src/helpers/: create_dir_if_it_doesnt_exist.rs  handle_status_code.rs  location.rs  mod.rs  numeric.rs  write_bytes_into_file.rs  write_bytes_into_file_async_tokio.rs  write_json_into_file.rs
src/helpers/git/: get_commit_link.rs  get_git_commit_info.rs  get_git_commit_string.rs  get_git_fetch_head.rs  get_git_html_info.rs  get_git_source_file_link.rs  git_info.rs  git_info_wrapper.rs  lazy_static_git_info.rs  mod.rs
src/helpers/http_request/: async_chunk.rs  async_http_request_client_request_builder_prep.rs  http_request_error.rs  mod.rs  sync_http_request_client_request_builder_prep.rs  sync_response_copy_to.rs
src/lazy_static/: git_info.rs
src/once_cell_globals/: config.rs  git_info.rs
src/proc_macros/: mod.rs  postgresql_generate_crud.rs
src/repositories_types/: mod.rs  one.rs  three_four_five_six_seven_eight.rs
src/repositories_types/tufa_server/: check_new_providers_posts.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  mod.rs  server_wrapper.rs  session_state.rs  settings.rs  startup.rs  try_build_actix_web_dev_server.rs  try_build_server.rs
src/server/: mod.rs  resource.rs  tracing_type.rs
src/server/extractors/: project_commit.rs  project_commit_extractor.rs
src/server/file_system/: create_dir_if_it_doesnt_exist.rs  mod.rs
src/server/http_request/: async_chunk.rs  async_http_request_client_request_builder_prep.rs  http_request_error.rs  http_request_method.rs  sync_http_request_client_request_builder_prep.rs  sync_response_copy_to.rs
src/server/middleware/: content_type_application_json.rs  mod.rs  (+1 more)
src/traits/: code_occurence.rs  code_occurence_insert.rs  code_occurence_merge.rs  code_occurence_methods.rs  code_path.rs  config_fields.rs  config_log.rs  console.rs  display_foreign_type.rs  error_display.rs  error_log.rs  error_to_string.rs  error_to_string_with_config.rs  error_to_string_without_config.rs  fields.rs  file_line_column.rs  from_few_code_occurences_hashmap.rs  get_application_settings.rs  get_bunyan_where_was.rs  get_bunyan_with_additional_where_was.rs  get_code_occurence.rs  get_code_path_without_config.rs  get_color.rs  get_column.rs  get_email_client.rs  get_email_client_settings.rs  get_file.rs  get_git_commit_link.rs  get_git_html_info.rs  get_git_info.rs  get_git_source_file_link.rs  get_hostname.rs  get_inner_source_and_code_occurence_vec.rs  get_json_where_was.rs  get_line.rs  get_log_where_was.rs  get_log_with_additional_where_was.rs  get_mongo_url.rs  get_postgres_connect_options_with_db.rs  get_postgres_connect_options_without_db.rs  (+50 more)
(+492 files in other folders)
