[package]
edition = "2021"
name = "tufa_common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
ansi_term = "0.12"
bytes = "1.2.1"
chrono = "0.4"
convert_case = "0.6.0"
dotenv = "0.15.0"
futures = "0.3.5"
http = "0.2.8"
once_cell = "1.16.0"
regex = "1.5"
config = "0.11"
rand = {version = "0.8", features = ["std_rng"]}
argon2 = {version = "0.4.0", features = ["std"]}
actix-cors = "0.6.1"
actix-web-lab = "0.18.3"
actix-session = {version = "0.7.2", features = ["redis-rs-tls-session"]}
actix-web-flash-messages = {version = "0.4.1", features = ["cookies"]}
tracing-actix-web = "0.6.1"
# reqwest = {version = "0.11.0", default-features = false, features = ["json", "blocking", "rustls-tls", "cookies"]}
mongodb = "2.0.1"
reqwest = {version = "0.11.0", default-features = false, features = ["json", "blocking", "rustls-tls", "cookies", "gzip", "brotli", "deflate", "trust-dns", "native-tls", "multipart", "stream", "cookies"]}
secrecy = {version = "0.8", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
serde-aux = "4.0.0"
serde-xml-rs = "0.6.0"
serde_derive = "1.0"
serde_json = "1.0"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.30"
tokio = {version = "1.7.1", features = ["macros"]}
tracing = {version = "0.1", features = ["log", "valuable"]}
itertools = "0.10.1"
uuid = {version = "0.8", features = ["v4", "serde"]}
sqlx = {version = "0.5", default-features = false, features = ["postgres", "runtime-actix-rustls", "macros", "uuid", "chrono", "migrate", "offline"]}
valuable = {version = "0.1.0", features = ["default", "std", "alloc", "derive", "valuable-derive"]}#maybe not all features needed
unicode-segmentation = "1"
validator = "0.16.0"
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
compile_time_git_info = {path = "../proc_macros/compile_time_git_info"}
enum_extension = {path = "../proc_macros/enum_extension"}
error_occurence = {path = "../proc_macros/error_occurence"}
generate_getter_traits_for_struct_fields = {path = "../proc_macros/generate_getter_traits_for_struct_fields"}
init_from_env_with_panic_if_failed = {path = "../proc_macros/init_from_env_with_panic_if_failed"}
provider_kind_from_config = {path = "../proc_macros/provider_kind_from_config"}
