[package]
edition = "2021"
name = "tufa_common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "=0.6.19", features = ["headers", "macros"]}
tower = {version = "=0.4.13"}
tower-http = {version = "=0.4.3", features = ["trace", "fs", "cors"]}
ansi_term = {version = "=0.12"}
bytes = {version = "=1.2.1"}
chrono = {version = "=0.4"}
convert_case = {version = "=0.6.0"}
dotenv = {version = "=0.15.0"}
futures = {version = "=0.3.28"}
http = {version = "=0.2.9"}
regex = {version = "=1.5.6"}
config = {version = "=0.13.3"}
rand = {version = "=0.8", features = ["std_rng"]}
num_cpus = {version = "=1.15.0"}
argon2 = {version = "=0.4.0", features = ["std"]}
mongodb = {version = "=2.0.1"}
reqwest = {version = "=0.11.17", default-features = false, features = ["json", "blocking", "rustls-tls", "cookies", "gzip", "brotli", "deflate", "trust-dns", "native-tls", "multipart", "stream", "cookies"]}
secrecy = {version = "=0.8", features = ["serde"]}
serde = {version = "=1.0", features = ["derive"]}
serde-aux = {version = "=4.0.0"}
serde-xml-rs = {version = "=0.6.0"}
serde_derive = {version = "=1.0"}
serde_json = {version = "=1.0"}
serde_path_to_error = {version = "=0.1.12"}
serde_with = {version = "=3.1.0"}
strum = {version = "=0.24.1"}
strum_macros = {version = "=0.24.3"}
thiserror = {version = "=1.0.30"}
tokio = {version = "=1.29.1", features = ["macros", "rt-multi-thread"]}
itertools = {version = "=0.10.1"}
uuid = {version = "=0.8", features = ["v4", "serde"]}
sqlx = {version = "=0.5", default-features = false, features = ["postgres", "runtime-actix-rustls", "macros", "uuid", "chrono", "migrate", "offline"]}
valuable = {version = "=0.1.0", features = ["default", "std", "alloc", "derive", "valuable-derive"]}#maybe not all features needed
unicode-segmentation = {version = "=1"}
validator = {version = "=0.16.0"}
tracing = {version = "=0.1", features = ["log", "valuable"]}
tracing-subscriber = {version = "=0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = {version = "=0.3"}
tracing-log = {version = "=0.1"}
getset = {version = "=0.1.2"}
urlencoding = {version = "=2.1.2"}
type_variants_from_reqwest_response = {path = "../proc_macros/type_variants_from_reqwest_response"}
check_specific_dependency_version_usage = {path = "../proc_macros/check_specific_dependency_version_usage"}
from_sqlx_postgres_error = {path = "../proc_macros/from_sqlx_postgres_error"}
compile_time_git_info = {path = "../proc_macros/compile_time_git_info"}
enum_extension = {path = "../proc_macros/enum_extension"}
error_occurence = {path = "../proc_macros/error_occurence"}
generate_getter_traits_for_struct_fields = {path = "../proc_macros/generate_getter_traits_for_struct_fields"}
init_from_env = {path = "../proc_macros/init_from_env"}
user_port_try_from_u16 = {path = "../proc_macros/user_port_try_from_u16"}